[package]
name = "photonos"
version = "0.2.0"
edition = "2021"
authors = ["Hervé Beraud <herveberaud.pro@gmail.com>"]
description = "A wget-like CLI that renders JavaScript-powered pages using Chromium with pure Rust"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/4383/photonos"
keywords = ["cli", "javascript", "chromium", "wget", "html"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
tokio-util = "0.7"
async-std = { version = "1", features = ["attributes"] }
built = "0.6"

[build-dependencies]
built = "0.6"